--- a/index.html
+++ b/index.html
@@ -145,12 +145,15 @@
                       <br />
                       <button id="btnLogin" class="btn btn-info btn-lg btn-block rounded-pill" type="button" style="background-color: transparent; width: 390px; margin-left: 170px; font-weight: 600; color: #ffffff; border-color: #ffffff;">¿Olvidaste la contraseña?</button>
                       <!--ALERTAAAAA-->
-                      <div style="margin-top: 20px;" class="alert alert-dismissible show fade alert-warning d-flex align-items-center" role="alert">  
+
+                      <div class="alert alert-dismissible hide fade alert-warning d-flex align-items-center" role="alert">  
                         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
                           <use xlink:href="#exclamation-triangle-fill"/>
                         </svg>  
-                        <div> Faltan campos </div>
-                      </div>
+                        <div>
+                          Faltan Campos 🤦‍♀️ 
+                        </div>
+                      </div> 
                   </form>
                 </div>
               </div>
