--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                           <use xlink:href="#exclamation-triangle-fill"/>
                         </svg>  
                         <div>
-                          Faltan Campos 🤦‍♀️ 
+                          Faltan Campos 
                         </div>
                       </div> 
                   </form>
