--- a/marchome.html
+++ b/marchome.html
@@ -97,29 +97,26 @@
                             <span class="fs-6 mid--disabled-section">Siguiendo</span>
                         </div>
                     </div>
-                    <section class="row mt-4">
-                        <div class="col pt-2 ">
-                            <div class="row">
-                                <div class="col-2">
-                                    <img class="rounded-circle" src="./asserts/images/profile.jfif" alt="" height="50px">
+                    <section class="row mt-2">
+                        <div class="col pt-2">
+                            <div class="row pb-2 border-bottom">
+                                <div class="col-2 mt-1 pt-2 text-center">
+                                    <img src="./res/img/profile_sample.jpg" alt="" class="rounded-circle profile--pic">
                                 </div>
+
                                 <div class="col-9 col-sm-10 ">
-                                    <input class="border-0 bg  form-control-lg" type="text" placeholder="¿Qué está pasando?">
-                                    <div class="ps-3 d-flex text-info">
-                                        <p><span><i class="fa-solid fa-earth-americas "></i></span></p>
-                                        <p class="fw-bold ps-1 ">Todos pueden compartir</p>
-                                        <hr>
-                                    </div>
-                                    <div class="row pb-2 justify-content-center">
-                                        <div class="col-9 text-info">
-                                            <span class="ps-3"><i class="fa-solid fa-image"></i></span>
-                                            <span class="ps-3"><i class="fa-solid fa-gift"></i></span>
-                                            <span class="ps-3"><i class="fa-solid fa-face-grin"></i></span>
-                                            <span class="ps-3"><i class="fa-solid fa-location-pin"></i></span>
+                                    <textarea class="form-control-lg border-0 tweet--area" type="text" rows="1" placeholder="¡¿Qué está pasando?!">
+                                    </textarea>
+                                    <div class="row  d-flex align-items-center">
+                                        <div class="col-9 tweet--icons">
+                                            <span class=""><i class="bi bi-image"></i></span>
+                                            <span class="ps-3"><i class="bi bi-filetype-gif"></i></span>
+                                            <span class="ps-3"><i class="bi bi-emoji-smile"></i></span>
+                                            <span class="ps-3"><i class="bi bi-calendar-event"></i></span>
+                                            <span class="ps-3"><i class="bi bi-geo-alt"></i></span>
                                         </div>
-                                        <div class="col-3 col-sm-2  ">
-                                            <a class="text-decoration-none fs-6  fw-bold text-white bg-info py-1 px-3  rounded-pill"
-                                                href="#">Postear</a>
+                                        <div class="col d-block">
+                                            <button class="btn main--button">Postear</button>
                                         </div>
                                     </div>
     
@@ -165,7 +162,7 @@
                             <!--Tweet 2-->
                             <div class="row d-flex mt-1 border-bottom">
                                 <div class="col-2 mt-1 pt-2 text-center">
-                                    <img src="./res/img/profile_sample.jpg" alt="" class="rounded-circle" style="width: 56px; height: 56px;"/>
+                                    <img src="./res/img/profile_sample.jpg" alt="" class="rounded-circle profile--pic"/>
                                 </div>
                                 <div class="col-9 ps-1">
                                     <div class="row d-flex justify-content-between align-items-center">
