Se arregló el botón para postear tweets

--- a/marchome.html
+++ b/marchome.html
@@ -107,16 +107,16 @@
                                 <div class="col-9 col-sm-10 ">
                                     <textarea class="form-control-lg border-0 tweet--area" type="text" rows="1" placeholder="¡¿Qué está pasando?!">
                                     </textarea>
-                                    <div class="row  d-flex align-items-center">
-                                        <div class="col-9 tweet--icons">
+                                    <div class="row d-flex align-items-center">
+                                        <div class="col-8 col-md-9 tweet--icons">
                                             <span class=""><i class="bi bi-image"></i></span>
                                             <span class="ps-3"><i class="bi bi-filetype-gif"></i></span>
                                             <span class="ps-3"><i class="bi bi-emoji-smile"></i></span>
                                             <span class="ps-3"><i class="bi bi-calendar-event"></i></span>
                                             <span class="ps-3"><i class="bi bi-geo-alt"></i></span>
                                         </div>
-                                        <div class="col d-block">
-                                            <button class="btn main--button">Postear</button>
+                                        <div class="col-4 col-md-3 d-flex d-md-block">
+                                            <button class="btn main--button w-100">Postear</button>
                                         </div>
                                     </div>
     
