--- a/home.html
+++ b/home.html
@@ -46,6 +46,7 @@
                       <div class="modal-body">
                         <!--FORMULARIO PARA UN POST-->
                         <form class="form-block" method="POST" action="./Backend/files/newPost.php">
+                          <input name="nombre" id="nombre">
                           <input name="idUsuario" id="idUsuario" >
                           <div class="row">
                             <div class="col-xs-12 col-sm-6">
@@ -56,7 +57,7 @@
                               </div>
                               <button type="submit" class="btn btn-primary" >
                                 Guardar
-                              </button>				
+                              </button>			
                             </div>
                           </div>
                         </form>
@@ -72,8 +73,10 @@
           </button>
         </div>
       </div>
-      <div id="postUsuarios">
+
+      <div type="button" id="postUsuarios">
       </div>
+
     </div>
   </div>
 </div>
@@ -82,8 +85,7 @@
 <template id="cardPost">
   <div class="card" style="width: 100%; margin-top: 50px;">
     <div class="card-body">
-      <h4 class="card-name" id="nameusu">Ola</h4>
-      <h5 class="card-title">Card title</h5>
+      <h5 class="userNamePost"></h5>
       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <p class="fecha">Fecha de Publicación</p>
@@ -92,29 +94,56 @@
         <button type="button" class="btn btn-primary btn-comment" data-bs-toggle="modal" data-bs-target="#commentModal" data-idpost="">
           <i class="fa-regular fa-comment"></i> 
         </button>
-      <!-- Modal -->
+        <p class="comentarios-parrafo"></p>
+
+
+        <!--<p  type="button"  data-bs-toggle="modal" data-bs-target="#MostrarComentarios"  class="comentarios-parrafo"></p>
+        <div class="modal fade" id="MostrarComentarios" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>-->
+
+
+      <!-- Modal para realizar un comentario -->
         <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  <h5 class="modal-title" id="exampleModalLabel" style="margin-left:75%;">Borradores</h5>
+                  <h5 class="modal-title" style="margin-left:75%;">Borradores</h5>
               </div>
             <!--FORMULARIO PARA COMENTARIO-->
               <div class="modal-body">
-                <textarea class="commentText" name="mensaje" id="commentText" style="display: flex; width: 480px; height: 100px; border: none;"></textarea>
+                <h5 class="nombreusuariopost" >Aqui va el Nombre del Usuario que hizo el post</h5>
+                <h6 class="idusuariopost" >Aqui va el idUsuario del que hizo el post</h6>
+                <p class="contenidodelpost">Aqui va el texto del post, dentro del modal</p>
                 <div class="mt-5">
                   <div class="form-block">
                     <!--NEW COMMENT-->
                     <div class="form-block">
                       <form id="commentForm" class="form-block" method="POST" action="./Backend/files/newComent.php">
                         <input name="idPost" id="commentPostId">
-                        <!--IDUSUARIO2-->
-                        <input name="idUsuario" id="idUsuario2">
+                        <!--IDUSUARIO2----------------------------------------->
+                        <input name="nombre" id="nombreUsuario-Comment">
+                        <input name="idUsuario-Comment" id="idUsuario-Comment">
                         <textarea name="comentario" id="comentario" class="form-input" required="" placeholder="Your comment"></textarea>
                         <button type="submit" class="btn btn-primary" id="btnComent" >
                           Responder
                         </button>
+                        
                       </form>
                     </div>
                   </div>
@@ -128,6 +157,7 @@
     </div>
   </div>
 </template>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
