--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>UGblog</title>
+  <title>Inicio / X</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -28,7 +28,7 @@
     <div class="col-sm-9">
       <div class="mt-5">
         <div class="form-block">
-          <textarea type="button" class="form-input" placeholder="Your text" name="mensaje" data-bs-toggle="modal" data-bs-target="#exampleModal"></textarea>
+          <textarea type="button" class="form-input" placeholder="¡¿Qué está pasando?!" name="mensaje" data-bs-toggle="modal" data-bs-target="#exampleModal"></textarea>
           <form class="form-block" method="POST" action="./Backend/files/newPost.php">
             <!--<input name="idUsuario" id="idUsuario" >-->
             <div class="row">
@@ -47,7 +47,7 @@
                         <!--FORMULARIO PARA UN POST-->
                         <form class="form-block" method="POST" action="./Backend/files/newPost.php">
                           <input name="nombre" id="nombre">
-                          <input name="idUsuario" id="idUsuario" >
+                          <input name="idUsuario" id="idUsuario">
                           <div class="row">
                             <div class="col-xs-12 col-sm-6">
                             </div>
@@ -94,10 +94,8 @@
         <button type="button" class="btn btn-primary btn-comment" data-bs-toggle="modal" data-bs-target="#commentModal" data-idpost="">
           <i class="fa-regular fa-comment"></i> 
         </button>
-        <p class="comentarios-parrafo"></p>
-
-
-        <!--<p  type="button"  data-bs-toggle="modal" data-bs-target="#MostrarComentarios"  class="comentarios-parrafo"></p>
+        <p class="comentarios-parrafo" ></p>
+        <button type="button" id="buttonloadComment" class="buttonloadComment">aqui</button>
         <div class="modal fade" id="MostrarComentarios" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -114,8 +112,7 @@
               </div>
             </div>
           </div>
-        </div>-->
-
+        </div>
 
       <!-- Modal para realizar un comentario -->
         <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
@@ -139,7 +136,7 @@
                         <!--IDUSUARIO2----------------------------------------->
                         <input name="nombre" id="nombreUsuario-Comment">
                         <input name="idUsuario-Comment" id="idUsuario-Comment">
-                        <textarea name="comentario" id="comentario" class="form-input" required="" placeholder="Your comment"></textarea>
+                        <textarea name="comentario" id="comentario" class="form-input" required="" placeholder="Postea tu respuesta"></textarea>
                         <button type="submit" class="btn btn-primary" id="btnComent" >
                           Responder
                         </button>
