--- a/home.html
+++ b/home.html
@@ -123,10 +123,10 @@
                   <h5 class="modal-title" style="margin-left:75%;">Borradores</h5>
               </div>
             <!--FORMULARIO PARA COMENTARIO-->
-              <div class="modal-body">
-                <h5 class="nombreusuariopost" >Aqui va el Nombre del Usuario que hizo el post</h5>
-                <h6 class="idusuariopost" >Aqui va el idUsuario del que hizo el post</h6>
-                <p class="contenidodelpost">Aqui va el texto del post, dentro del modal</p>
+              <div class="modal-body" id="cardPost">
+                <p id="nombreusuariopost" >Aqui se carga el nombre del que hizo el post</p>
+                <p id="idusuariopost" >Aqui se carga el idusuario del que hizo el post</p>
+                <p id="contenidodelpost">Aqui se carga el contendo del post</p>
                 <div class="mt-5">
                   <div class="form-block">
                     <!--NEW COMMENT-->
