--- a/marcindex.html
+++ b/marcindex.html
@@ -25,7 +25,7 @@
                     <div class="row mt-5 signin--block">
                         <h3 class="">Únete hoy</h3>
                         <button type="button" class="btn signin--button">
-                            <i class="bi bi-google"></i>
+                            <i class="bi bi-google text-primary"></i>
                             <span class="ps-2">Registrarse con Google</span>
                         </button>
                         <button type="button" class="btn signin--button">
@@ -34,12 +34,12 @@
                         </button>
                         <hr>
                         <span class="separator">o</span>
-                        <button type="button" class="btn main--button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <button type="button" class="btn main--button" data-bs-toggle="modal" data-bs-target="#ModalRegistrar">
                             <span>Crear cuenta</span>
                         </button>
                         <p>
-                            Al registrarte, aceptas los Términos de servicio y la Política de privacidad, 
-                            incluida la política de Uso de Cookies.
+                            Al registrarte, aceptas los <a href="" class="text-decoration-none">Términos de servicio</a> y la <a href="" class="text-decoration-none">Política de privacidad</a>, 
+                            incluida la política de <a href="" class="text-decoration-none">Uso de Cookies</a>.
                         </p>
                     </div>
                     <div class="row mt-5 login--block">
@@ -52,7 +52,7 @@
                 <!--Modal Cards-->
 
                 <!--Create account-->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="ModalRegistrar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -64,29 +64,29 @@
                             <div class="modal-body">
                                 <div class="register--container">
                                     <h4 class="modal-title">Crea tu cuenta</h4>
-                                    <form action="" class="form--container">
+                                    <form action="./Backend/files/registroUsuarios.php" method="post" class="form--container">
                                         <div class="form-floating mb-3">
-                                            <input type="text" class="form-control" id="nombre" placeholder="Nombre"/>
+                                            <input type="text" class="form-control" id="nameInput" name="nombre" maxlength="25" placeholder="Nombre" required oninput="validInputs()"/>
                                             <label for="nombre" class="form-label">Nombre</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input type="text" class="form-control" id="apellido" placeholder="Apellido"/>
+                                            <input type="text" class="form-control" id="lastnameInput" name="apellido" maxlength="25" placeholder="Apellido" required oninput="validInputs()"/>
                                             <label for="apellido" class="form-label">Apellido</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input type="email" class="form-control" id="correo" placeholder="Correo electrónico"/>
+                                            <input type="email" class="form-control" id="emailInput" placeholder="Correo electrónico" required oninput="validInputs()"/>
                                             <label for="nombre" class="form-label">Correo electrónico</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input type="text" class="form-control" id="nombre" placeholder="Nombre"/>
+                                            <input type="text" class="form-control" id="userInput" placeholder="Tag de usuario" required oninput="validInputs()"/>
                                             <label for="nombre" class="form-label">Tag de usuario</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input type="password" class="form-control" id="contrasena" placeholder="Contraseña"/>
-                                            <label for="nombre" class="form-label">Contraseña</label>
+                                            <input type="password" class="form-control" id="passwordInput" name="password" placeholder="Contraseña" required oninput="validInputs()"/>
+                                            <label for="password" class="form-label">Contraseña</label>
                                         </div>
                                         <div class="row mt-4">
-                                            <button type="submit" class="btn secondary--button" id="boton" disabled>Siguiente</button>
+                                            <button type="submit" class="btn secondary--button" id="btnSignin" disabled>Siguiente</button>
                                         </div>
                                     </form>
                                 </div>
@@ -98,15 +98,17 @@
                 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <div class="modal-body ">
+                            <div class="modal-header">
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body ">
                                 <img class="rounded logo" src="./src/x_logo.png" alt="">
                                 <div class="login--container">
                                     
                                     <h2 class="modal-title text-center my-3">Inicia sesión en X</h2>
                                     <div class="row">
                                         <button type="button" class="btn signin--button">
-                                            <i class="bi bi-google"></i>
+                                            <i class="bi bi-google text-primary"></i>
                                             <span class="ps-2">Iniciar sesión con Google</span>
                                         </button>
                                         <button type="button" class="btn signin--button">
@@ -118,15 +120,15 @@
                                     </div>
                                     <form action="" class="form--container">
                                         <div class="form-floating mb-3">
-                                            <input type="email" class="form-control" id="nombre" placeholder="Correo electrónico o nombre de usuario"/>
-                                            <label for="nombre" class="form-label">Correo electrónico</label>
+                                            <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Correo electrónico o nombre de usuario"/>
+                                            <label for="usuario" class="form-label">Correo electrónico o usuario</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input type="password" class="form-control" id="contrasena" placeholder="Contraseña"/>
-                                            <label for="nombre" class="form-label">Contraseña</label>
+                                            <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña"/>
+                                            <label for="password" class="form-label">Contraseña</label>
                                         </div>
                                         <div class="row mt-4">
-                                            <button type="submit" class="btn secondary--button">Siguiente</button>
+                                            <button type="submit" id="btnLogin" class="btn secondary--button">Siguiente</button>
                                             <button type="button" class="btn signin--button">¿Olvidaste tu contraseña?</button>
                                         </div>
                                     </form>
@@ -139,4 +141,5 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/marcindex.js"></script>
 </html>
