Se corrigió la etiqueta template

--- a/loadcomment.html
+++ b/loadcomment.html
@@ -274,7 +274,7 @@
                             </div>
 
                             <!--Comment Template-->
-                            <div id="cardComment">
+                            <template id="cardComment">
                                 <div class="border-0">
                                     <div class="row d-flex mt-1 border-bottom">
                                         <div class="col-2 mt-1 pt-2 text-center">
@@ -329,7 +329,7 @@
 
                                     </div>
                                 </div>
-                            </div>
+                            </template>
 
                         </div>
                     </section>
